; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/sdiotool/extr_sdiotool.c_brcmf_sdiod_change_state.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/sdiotool/extr_sdiotool.c_brcmf_sdiod_change_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcmf_sdio_dev = type { i32, i32 }

@BRCMF_SDIOD_NOMEDIUM = common dso_local global i32 0, align 4
@BRCMF_BUS_DOWN = common dso_local global i32 0, align 4
@BRCMF_BUS_UP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @brcmf_sdiod_change_state(%struct.brcmf_sdio_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.brcmf_sdio_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.brcmf_sdio_dev* %0, %struct.brcmf_sdio_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.brcmf_sdio_dev*, %struct.brcmf_sdio_dev** %3, align 8
  %6 = getelementptr inbounds %struct.brcmf_sdio_dev, %struct.brcmf_sdio_dev* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @BRCMF_SDIOD_NOMEDIUM, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %16, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.brcmf_sdio_dev*, %struct.brcmf_sdio_dev** %3, align 8
  %13 = getelementptr inbounds %struct.brcmf_sdio_dev, %struct.brcmf_sdio_dev* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp eq i32 %11, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %10, %2
  br label %42

17:                                               ; preds = %10
  %18 = load %struct.brcmf_sdio_dev*, %struct.brcmf_sdio_dev** %3, align 8
  %19 = getelementptr inbounds %struct.brcmf_sdio_dev, %struct.brcmf_sdio_dev* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  switch i32 %20, label %37 [
    i32 129, label %21
    i32 128, label %27
  ]

21:                                               ; preds = %17
  %22 = load %struct.brcmf_sdio_dev*, %struct.brcmf_sdio_dev** %3, align 8
  %23 = getelementptr inbounds %struct.brcmf_sdio_dev, %struct.brcmf_sdio_dev* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @BRCMF_BUS_DOWN, align 4
  %26 = call i32 @brcmf_bus_change_state(i32 %24, i32 %25)
  br label %38

27:                                               ; preds = %17
  %28 = load i32, i32* %4, align 4
  %29 = icmp eq i32 %28, 129
  br i1 %29, label %30, label %36

30:                                               ; preds = %27
  %31 = load %struct.brcmf_sdio_dev*, %struct.brcmf_sdio_dev** %3, align 8
  %32 = getelementptr inbounds %struct.brcmf_sdio_dev, %struct.brcmf_sdio_dev* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* @BRCMF_BUS_UP, align 4
  %35 = call i32 @brcmf_bus_change_state(i32 %33, i32 %34)
  br label %36

36:                                               ; preds = %30, %27
  br label %38

37:                                               ; preds = %17
  br label %38

38:                                               ; preds = %37, %36, %21
  %39 = load i32, i32* %4, align 4
  %40 = load %struct.brcmf_sdio_dev*, %struct.brcmf_sdio_dev** %3, align 8
  %41 = getelementptr inbounds %struct.brcmf_sdio_dev, %struct.brcmf_sdio_dev* %40, i32 0, i32 0
  store i32 %39, i32* %41, align 4
  br label %42

42:                                               ; preds = %38, %16
  ret void
}

declare dso_local i32 @brcmf_bus_change_state(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
